# terraform-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
example/terraform/: main.tf
example/terraform/modules/timer/: main.tf  variables.tf
src/: errors.rs  event.rs  lib.rs
src/process/: errors.rs  mod.rs
